amend service def for a gke instance with loadbalancer

--- a/kubernetes/qs-svc.yaml
+++ b/kubernetes/qs-svc.yaml
@@ -11,6 +11,6 @@ spec:
     environment: production
   ports:
   - port: 80 
-    targetPort: 8080
-    nodePort: 31101
-  type: "NodePort"      
+    targetPort: 80
+    protocol: TCP  
+  type: LoadBalancer      
