--- a/kubernetes/qs-svc.yaml
+++ b/kubernetes/qs-svc.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
-kind: Service
+kind: "Service"
 metadata:
-  name: QuestionShow-prod-svc
+  name: "questionshow-prod-svc"
   labels:
-    app: QuestionShow
-    environment: production
+    app: "questionshow"
+    environment: "production"
 spec:
   selector:
-    app: QuestionShow
-    environment: production
+    app: "questionshow"
+    environment: "production"
   ports:
   - port: 80 
     targetPort: 80
-    protocol: TCP  
-  type: LoadBalancer      
+    protocol: "TCP"  
+  type: "LoadBalancer"
